<resources>
    <string name="app_name">Fitme</string>
    <string name="fitme">FitMe</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="choose_a_password_min_8_characters">Choose a password(Min. 8 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="welcome_message">Welcome message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_height">Enter Height</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="calculate">Calculate</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="choose_a_category_and_start_your_grind">Choose a category and start your grind:</string>
    <string name="profile">Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="history">History</string>
    <string name="area">Area</string>
    <string name="date">Date</string>
    <string name="start">START</string>
    <string name="get_ready">Get Ready</string>
</resources>