<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/history"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />

        <item
            android:id="@+id/bmi"
            android:icon="@drawable/ic_bmi"
            android:title="BMI Calculator" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="Logout" />

    </group>

</menu>