<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".fragment.BmiFragment">


    <TextView
        android:id="@+id/tvBmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/enter_height"
        android:inputType="number"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:background="@color/white"
        android:hint="@string/enter_weight"
        android:inputType="number"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:maxLines="1"
        android:padding="10dp"
        android:text="@string/calculate"
        android:textSize="16sp" />


</LinearLayout>