<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Activity.LoginActivity">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLogin"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsername"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_pass"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/green_primary"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textStyle="bold" />

<!--    <TextView-->
<!--        android:id="@+id/tvForgotPassword"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/btnLogin"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:gravity="center_horizontal"-->
<!--        android:text="@string/forgot_password"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="16sp" />-->


    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>