<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Activity.RegisterActivity">


    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="10dp"
        android:hint="Enter your name"
        android:inputType="textCapWords"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etName"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="10dp"
        android:hint="Enter your age"
        android:inputType="number"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAge"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_height"
        android:drawablePadding="10dp"
        android:hint="Enter your height (in cms) "
        android:inputType="number"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etHeight"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_weight"
        android:drawablePadding="10dp"
        android:hint="Enter your weight (in kgs) "
        android:inputType="number"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp" />


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etWeight"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_pass"
        android:drawablePadding="10dp"
        android:hint="@string/choose_a_password_min_8_characters"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp" />


    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_pass"
        android:drawablePadding="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etConfirmPassword"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/green_primary"
        android:padding="10dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>